# mass-sipm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  check_failed_jobs.sh  check_jobs.sh  check_uploaded_files.sh  combine_csv.py  design-parameters.yaml  doGeoFit.sh  draw_histos.py  env_lcg.sh  fit.py  fit_peaks.py  get_datasets.sh  get_dcr.py  get_peaks_diff.py  get_vbd.py  harvest_plots.sh  linear_regression.py  loop.cc  multifit.sh  new.yaml  new_submit.sh  not-linked.yaml  peaks.py  prepare_all_jobs.py  prepare_fit_jobs.py  prepare_fit_jobs_new.py  prepare_hist_jobs.py  prepare_jobs.py  prepare_skim_jobs.py  projection.py  reff-pde.yaml  submit_fit_jobs.sh  submit_jobs.sh  test.yaml  valid-run.yaml
config/: design-parameters.yaml  design-parameters2.yaml  exclude.txt  harvest-main-runs.yaml  light-runs.yaml  light-valid-run.yaml  light_runs_newlyadded_Nov6.yaml  light_runs_newlyadded_Oct7.yaml  main-runs.yaml  main_runs_newlyadded_Nov6_retest.yaml  main_runs_newlyadded_Oct7.yaml  new.yaml  reff-pde-table.cfg  simple_light_run.yaml  simple_main_run.yaml  single_run.yaml  test-run.yaml  test.yaml  tsn_analyzed.txt  valid-run-new.yaml  valid-run.yaml
datasets/: light_run_0001.txt  light_run_0016.txt  light_run_0019.txt  light_run_0020.txt  light_run_0025.txt  light_run_0026.txt  light_run_0027.txt  light_run_0028.txt  light_run_0029.txt  light_run_0030.txt  light_run_0031.txt  light_run_0032.txt  light_run_0033.txt  light_run_0034.txt  light_run_0035.txt  light_run_0036.txt  light_run_0037.txt  light_run_0039.txt  light_run_0040.txt  light_run_0042.txt  light_run_0044.txt  light_run_0045.txt  light_run_0046.txt  light_run_0047.txt  light_run_0048.txt  light_run_0049.txt  light_run_0050.txt  light_run_0051.txt  light_run_0052.txt  light_run_0053.txt  light_run_0054.txt  light_run_0055.txt  light_run_0058.txt  light_run_0060.txt  light_run_0061.txt  light_run_0062.txt  light_run_0064.txt  light_run_0065.txt  light_run_0066.txt  light_run_0067.txt  (+367 more)
fit_studies/: ap_fit.py  charge_fit_ap.py  compound_pdf.py
include/: ExceptionV.h  Options.h  Utils.h
plotter/: dcr_draw.py  draw_checkpoints.py  draw_design.py  enf_data_draw.py  gain_draw.py  pct_draw.py  pde_draw.py  plot_waveforms.py  vbd_diff_draw.py
python/: conv_binomial.py  utils.py
script/: CPFit.py  GPFit.py  GPplusAP.py  ImpGPFit.py  approximate.py  bkp.py  bytile.py  calculate_lambda.py  calculate_mu.py  cdf.py  charge_fit.py  check_all_jobs.py  check_files.py  check_jobs.sh  check_jobs_multi-thread.sh  clear_all_jobs.py  combine_csv.py  csv2root.py  dcr_fit.py  design-coordinates.py  draw.py  draw_corrected_map.py  draw_dcr.py  draw_design.py  draw_histos.py  draw_precise_map.py  error_test.py  extract_all_pdfs.py  extract_decoder.py  fit.py  fit_gaussian_peaks.py  fit_peaks_simple.py  get_dcr.py  get_peaks_diff.py  get_vbd.py  get_vbd_new.py  get_waveforms.py  getlocal.py  harvest.py  kmeans.py  (+34 more)
src/: Options.cc  dcr.cc  lightmap.cc  new_dcr.cc  print.cc  scan.cc  skim-signal.cc  store-waveform.cc
test/: README.md  aligh_both_runs.py  calculate_light_map.py  check_csv.py  check_uploaded_files.sh  combineCSVandReffMu.sh  (+24 more)
(+346 files in other folders)
